fix resume in print mode overflowing to two pages

--- a/css/resume.less
+++ b/css/resume.less
@@ -93,6 +93,14 @@
 			}
 
 			margin-bottom: 2em;
+
+			&:last-child {
+				margin-bottom: 0em;
+
+				blockquote:last-child {
+					margin-bottom: 0;
+				}
+			}
 		}
 
 		.leftColumn {
